Mon Mar  4 12:01:34 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: patch from Charles Bozeman for the exslt date
	  extension
	* configure.in tests/exslt/Makefile.am tests/exslt/date/*: added
	  the associated regression test provided by Charles

Fri Mar  1 10:17:26 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: Fixed #73088 with the associated patch

Fri Mar  1 10:14:07 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: similar to #72663 and #72658, don't memdump
	  unless compiled explicitely with memory debugging switched on
	* TODO: refreshed a bit

Fri Feb 22 23:44:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/generator.py python/libxslt.c: changes for the 'usual'
	  setup.py to allow building a libxml2-python
	  module based on the same code. The initialization is however
	  different the 2 .so files fo libxml2 and libxslt are identical and
	  they entry point initialize both libraries. this is done to avoid
	  some possible nasty problem since the Python don't merge the maps
	  of all shared modules.
	* python/libxsl.py: attempt to cope with the shared library loading
	  problem when both modules are not merged.

Thu Feb 21 12:59:59 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/site.xml doc/xslt.html doc/python.html doc/*.html: added
	  documentation for the wrappers and python modules.

Wed Feb 13 14:22:22 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-74.xml
	  tests/general/Makefile.am tests/general/bug-74.*: added a 
	  specific example for bug #71342 in the regression tests
	* tests/docbook/result/xhtml/gdp-handbook.xhtml: fixing
	  #71342 changed one attribute serialization.

Tue Feb 12 15:08:38 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: trying to fix #71270 

Mon Feb 11 19:40:34 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/*.py: removed tab used spaces